# servio

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  .gitmodules  .pre-commit-config.yaml  0001-record-architecture-decisions_8md.html  0002-project-shall-be-writen-with-c-20_8md.html  0003-stm32g4-is-the-first-platform_8md.html  0004-servo-shall-provide-position-control_8md.html  0005-servo-shall-provide-velocity-control_8md.html  0006-servo-shall-provide-current-control_8md.html  0007-chained-control-loops-architecture-shall-be-used_8md.html  0008-cmake-is-the-one-only-build-system_8md.html  0009-if-servo-in-position-velocity-or-current-mode-limits-for-all-three-modes-shall-be-respected-at-once_8md.html  0010-stm32h5-is-the-main-platform_8md.html  0011-modular-control-loop-architecture-shall-be-used_8md.html  01_8system_8md.html  02_8control_8md.html  03_8limits_8md.html  04_8comms_8md.html  05_8units_8md.html  06_8configuration_8md.html  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  LICENSE  Makefile  README.md  README_8md.html  acquisition_8cpp.html  acquisition_8cpp__incl.map  acquisition_8cpp__incl.md5  acquisition_8hpp.html  acquisition_8hpp__incl.map  acquisition_8hpp__incl.md5  acquisition_8hpp_source.html  acquisition__inl_8hpp.html  acquisition__inl_8hpp__incl.map  (+4540 more)
boards/proto3/: CMakeLists.txt  board.cpp
boards/prototype2/: CMakeLists.txt  adc.cpp  board.cpp  clock.cpp  config.cpp  duart.cpp  extra.cpp  gpio.cpp  iuart.cpp  setup.hpp  timers.cpp  uart.cpp
src/: CMakeLists.txt  base.hpp  brd.hpp  callbacks.hpp  cfg_dispatcher.cpp  cfg_dispatcher.hpp  config.hpp  control.cpp  control.hpp  converter.hpp  core.hpp  core_drivers.hpp  drv_interfaces.hpp  gitversion.h  globals.cpp  globals.hpp  indication.cpp  indication.hpp  kalman.hpp  load_persistent_config.hpp  metrics.cpp  metrics.hpp  monitor.hpp  protocol.cpp  protocol.hpp  scaled.hpp  standard_callbacks.hpp  static_detector.hpp  status.cpp  status.hpp  status_category.hpp  stm32g4xx_hal_conf.h
src/base/: CMakeLists.txt  base.hpp  callbacks.hpp  drv_interfaces.hpp  fmt.hpp  sentry.hpp  status.hpp
src/base/tests/: fmt_utest.cpp
src/bb/: CMakeLists.txt  basic.cpp  bb_test_case.hpp  config_test.cpp  gov_test.cpp  modes_test.cpp  moves.cpp  moves_test.cpp  properties_test.cpp
src/brd/: brd.hpp
src/brd/proto3/: CMakeLists.txt  bench.cpp  board.cpp  tests.cpp
src/brd/proto4/: CMakeLists.txt  bench.cpp  board.cpp  tests.cpp
src/brd/proto4.1/: README.md
src/brd/prototype2/: CMakeLists.txt  adc.cpp  board.cpp  clock.cpp  config.cpp  gpio.cpp  setup.hpp  timers.cpp  uart.cpp
src/cfg/: CMakeLists.txt  base.hpp  cfg.md  def.hpp  def.json  default.hpp  dispatcher.cpp  dispatcher.hpp  gen.py  handler.hpp  key.hpp  map.hpp  math.hpp  record.hpp  storage.cpp  storage.hpp
src/cfg/tests/: cfg_utest.cpp  (+1 more)
src/cnv/: CMakeLists.txt  converter.hpp  current.hpp  linear_converter.hpp  position.hpp  setup.hpp  temperature.hpp  utils.hpp  voltage.hpp
src/config/: conversion.hpp
src/conversion/: current.hpp  position.hpp  temperature.hpp  voltage.hpp
src/core/: CMakeLists.txt  callbacks.hpp  core.hpp  dispatcher.cpp  dispatcher.hpp  drivers.hpp  globals.cpp  globals.hpp  map_cfg.hpp
src/ctl/: CMakeLists.txt  config.hpp  control.cpp  control.hpp  governor.hpp  linear_transition_regulator.hpp  pid_module.hpp
src/drv/: CMakeLists.txt  adc_pooler.hpp  adc_pooler_def.hpp  callbacks.hpp  char_uart.cpp  char_uart.hpp  clock.hpp  cobs_uart.cpp  cobs_uart.hpp  defs.hpp  drv8251.hpp  dts_temp.hpp  flash_cfg.cpp  flash_cfg.hpp  hbridge.cpp  hbridge.hpp  interfaces.hpp  leds.cpp  leds.hpp  mock.hpp  nl_uart.cpp  nl_uart.hpp  paged_i2c_eeprom.cpp  paged_i2c_eeprom.hpp  quad_encoder.hpp  retainers.hpp
src/ftest/: CMakeLists.txt  is_powerless.hpp  main.cpp  rewind.cpp  rewind.hpp  setup_tests.hpp  testing_system.hpp  utest.hpp
src/ftester/: CMakeLists.txt  base.hpp  cli.cpp  cli.hpp  config.cpp  config.hpp  flash.cpp  flash.hpp  handle_eptr.cpp  handle_eptr.hpp  main.cpp  recorder.hpp  system.hpp
src/fw/: CMakeLists.txt  board.hpp  callbacks.hpp  cfg_context.hpp  cfg_dispatcher.cpp  cfg_dispatcher.hpp  context.cpp  context.hpp  conversion.hpp  core.hpp  dispatcher.cpp  dispatcher.hpp  extra.cpp  globals.cpp  globals.hpp  install_stop_callback.hpp  it.cpp  load_persistent_config.hpp  main.cpp  map_cfg.hpp  monitor.hpp  servio_pb.cpp  servio_pb.hpp  setup.cpp  setup.hpp  store_persistent_config.cpp  store_persistent_config.hpp  util.cpp  util.hpp
src/gov/: CMakeLists.txt  governor.cpp  governor.hpp  governor_manager.hpp
src/gvnr/: CMakeLists.txt  governor.cpp  governor.hpp
src/host/: CMakeLists.txt  async_cobs.h  async_cobs.hpp  cli.cpp  cli.hpp  config.cpp  config_cmds.cpp  config_cmds.hpp  exceptions.hpp  main.cpp  serial.cpp  serial.hpp
src/iface/: CMakeLists.txt  base.h  base.hpp  def.h  def.hpp  def.json  gen.py  iface.md  io.options  io.proto  kvals_parse.hpp  parse.cpp  util.h
src/klmn/: CMakeLists.txt  kalman.hpp  simulate.cpp  simulate.hpp
src/lib/: CMakeLists.txt  atom_visit.hpp  fmt.hpp  json_ser.hpp  linear_transition_regulator.hpp  paging.hpp  parser.hpp  str_lib.h  str_lib.hpp  type_tag.hpp
src/mon/: CMakeLists.txt  effects.cpp  effects.hpp  indication.cpp  indication.hpp  monitor.hpp
src/mtr/: CMakeLists.txt  metrics.cpp  metrics.hpp  posvel_kalman.hpp  static_detector.hpp
src/scmdio/: CMakeLists.txt  async_cobs.cpp  async_cobs.hpp  base.hpp  bflash.cpp  bflash.hpp  cli.cpp  cli.hpp  config_cmds.cpp  config_cmds.hpp  exceptions.hpp  field_util.hpp  main.cpp  pid_autotune.hpp  pid_autotune_cmd.cpp  pid_autotune_cmd.hpp  port.cpp  port.hpp  preset.cpp  preset.hpp  serial.cpp  serial.hpp  setuplib.cpp  setuplib.hpp
src/sim/: motor.hpp
src/sntr/: CMakeLists.txt  base.hpp  central_sentry.cpp  central_sentry.hpp  central_sentry_iface.hpp  record.hpp  sentry.cpp  sentry.hpp  test_central_sentry.hpp
tests/: CMakeLists.txt  cfg_storage_utest.cpp  cfg_utest.cpp  control_utest.cpp  kalman_utest.cpp  metrics_utest.cpp  motor.hpp
tests/bb/: basic.cpp  bb_test_case.hpp  moves.cpp
(+392 files in other folders)
